unpackaged/main/default/objects/GES_Connect_Corporate_Accounts__c/GES_Connect_Corporate_Accounts__c.object-meta.xml
<CustomObject>
    <description>Details for GES Connect - Corporate Accounts  for the Data Requirements purpose</description>
    <label>GES Connect - Corporate Accounts</label>
    <nameField>
        <displayFormat>GCA-{0000}</displayFormat>
        <label>GES Connect - Corporate Accounts</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GES Connect - Corporate Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>