unpackaged/main/default/objects/GES_Connect_Corporate_Accounts__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>GES_Connet_Corporate_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>