unpackaged/main/default/objects/GES_Connect_Corporate_Accounts__c/fields/Acronym_of_Congress__c.field-meta.xml
<CustomField>
    <fullName>Acronym_of_Congress__c</fullName>
    <label>Acronym of Congress</label>
    <length>30</length>
    <type>Text</type>
</CustomField>