unpackaged/main/default/objects/GES_Connect_Corporate_Accounts__c/fields/Advanced_Warehouse_Location_Name__c.field-meta.xml
<CustomField>
    <fullName>Advanced_Warehouse_Location_Name__c</fullName>
    <label>Adv. Whs. Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>