unpackaged/main/default/objects/GES_Connect_Corporate_Accounts__c/fields/Ancillary_Meeting_Space_Required__c.field-meta.xml
<CustomField>
    <fullName>Ancillary_Meeting_Space_Required__c</fullName>
    <label>Ancillary Meeting Space Required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>