unpackaged/main/default/objects/GES_Connect_Corporate_Accounts__c/fields/Assoc_Activity_Type_offered__c.field-meta.xml
<CustomField>
    <fullName>Assoc_Activity_Type_offered__c</fullName>
    <label>Assoc. Activity Type offered</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Advertising Tactics</fullName>
            </value>
            <value>
                <fullName>Product Theater</fullName>
            </value>
            <value>
                <fullName>Profile/Landing Page</fullName>
            </value>
            <value>
                <fullName>Sponsorship</fullName>
            </value>
            <value>
                <fullName>Symposia</fullName>
            </value>
            <value>
                <fullName>Virtual Exhibit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>