unpackaged/main/default/objects/GES_Connect_Corporate_Accounts__c/fields/Assoc_Provided_Data__c.field-meta.xml
<CustomField>
    <fullName>Assoc_Provided_Data__c</fullName>
    <label>Is data provided by Assoc.?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Received</fullName>
            </value>
            <value>
                <fullName>Requested</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>