unpackaged/main/default/objects/GES_Connect_Corporate_Accounts__c/fields/Association_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Association_Contact_Name__c</fullName>
    <label>Association Contact Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>