unpackaged/main/default/objects/GES_Connect_Corporate_Accounts__c/fields/Association_Email__c.field-meta.xml
<CustomField>
    <fullName>Association_Email__c</fullName>
    <label>Association Email</label>
    <type>Email</type>
</CustomField>