unpackaged/main/default/objects/GES_Connect_Corporate_Accounts__c/fields/Association_Name__c.field-meta.xml
<CustomField>
    <fullName>Association_Name__c</fullName>
    <label>Association Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>