unpackaged/main/default/objects/GES_Connect_Corporate_Accounts__c/fields/Association_phone__c.field-meta.xml
<CustomField>
    <fullName>Association_phone__c</fullName>
    <label>Association Phone</label>
    <type>Phone</type>
</CustomField>