unpackaged/main/default/objects/GES_Connect_Corporate_Accounts__c/fields/Association_website__c.field-meta.xml
<CustomField>
    <fullName>Association_website__c</fullName>
    <label>Association Website</label>
    <type>Url</type>
</CustomField>