unpackaged/main/default/objects/GES_Connect_Corporate_Accounts__c/fields/Badges_Required__c.field-meta.xml
<CustomField>
    <fullName>Badges_Required__c</fullName>
    <label>Badges Required</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>