unpackaged/main/default/objects/GES_Connect_Corporate_Accounts__c/fields/Brand_1__c.field-meta.xml
<CustomField>
    <fullName>Brand_1__c</fullName>
    <label>Brand 1</label>
    <length>100</length>
    <type>Text</type>
</CustomField>