unpackaged/main/default/objects/GES_Connect_Corporate_Accounts__c/fields/Brand_2__c.field-meta.xml
<CustomField>
    <fullName>Brand_2__c</fullName>
    <label>Brand 2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>