unpackaged/main/default/objects/GES_Connect_Corporate_Accounts__c/fields/Brand_3__c.field-meta.xml
<CustomField>
    <fullName>Brand_3__c</fullName>
    <label>Brand 3</label>
    <length>100</length>
    <type>Text</type>
</CustomField>