unpackaged/main/default/objects/GES_Connect_Corporate_Accounts__c/fields/Brand_Approval__c.field-meta.xml
<CustomField>
    <fullName>Brand_Approval__c</fullName>
    <label>Brand Approval</label>
    <type>TextArea</type>
</CustomField>