unpackaged/main/default/objects/GES_Connect_Corporate_Accounts__c/fields/Budget_Status__c.field-meta.xml
<CustomField>
    <fullName>Budget_Status__c</fullName>
    <label>Budget Status</label>
    <type>TextArea</type>
</CustomField>