unpackaged/main/default/objects/GES_Connect_Corporate_Accounts__c/fields/Client_PO__c.field-meta.xml
<CustomField>
    <fullName>Client_PO__c</fullName>
    <label>Client PO #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>