unpackaged/main/default/objects/GES_Connect_Corporate_Accounts__c/fields/Complimentary_Badges__c.field-meta.xml
<CustomField>
    <fullName>Complimentary_Badges__c</fullName>
    <label># Complimentary Badges</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>