unpackaged/main/default/objects/GES_Connect_Corporate_Accounts__c/fields/Congress_Cancellation_Date__c.field-meta.xml
<CustomField>
    <fullName>Congress_Cancellation_Date__c</fullName>
    <label>Congress Cancellation Date</label>
    <type>DateTime</type>
</CustomField>