unpackaged/main/default/objects/GES_Connect_Corporate_Accounts__c/fields/Congress_Cancelled__c.field-meta.xml
<CustomField>
    <fullName>Congress_Cancelled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Congress Cancelled</label>
    <type>Checkbox</type>
</CustomField>