unpackaged/main/default/objects/GES_Connect_Corporate_Accounts__c/fields/Congress_Level__c.field-meta.xml
<CustomField>
    <fullName>Congress_Level__c</fullName>
    <description>created for SAL 515- Reason: The client needs to track/report on participation by congress overall level (currently we track &quot;Level&quot; at the activity instance).</description>
    <label>Congress Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>7</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>