unpackaged/main/default/objects/GES_Connect_Corporate_Accounts__c/fields/Congress_Occurence__c.field-meta.xml
<CustomField>
    <fullName>Congress_Occurence__c</fullName>
    <label>Congress Occurrence</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Annual</fullName>
                <default>true</default>
                <label>Annual</label>
            </value>
            <value>
                <fullName>One Time Event</fullName>
            </value>
            <value>
                <fullName>Bi-Annual</fullName>
            </value>
            <value>
                <fullName>Tri-Annual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>