unpackaged/main/default/objects/GES_Connect_Corporate_Accounts__c/fields/Congress_Registrants__c.field-meta.xml
<CustomField>
    <fullName>Congress_Registrants__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Congress Registrants</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>