unpackaged/main/default/objects/GES_Connect_Corporate_Accounts__c/fields/Congress_Shipping__c.field-meta.xml
<CustomField>
    <fullName>Congress_Shipping__c</fullName>
    <defaultValue>&quot;FOR: &quot;</defaultValue>
    <description>Created under SAL 475.</description>
    <label>Congress</label>
    <type>TextArea</type>
</CustomField>