unpackaged/main/default/objects/GES_Connect_Corporate_Accounts__c/fields/Congress_Type__c.field-meta.xml
<CustomField>
    <fullName>Congress_Type__c</fullName>
    <label>Congress Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AbC</fullName>
            </value>
            <value>
                <fullName>GBL</fullName>
            </value>
            <value>
                <fullName>INC</fullName>
            </value>
            <value>
                <fullName>LED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>