unpackaged/main/default/objects/GES_Connect_Corporate_Accounts__c/fields/Congress_Website__c.field-meta.xml
<CustomField>
    <fullName>Congress_Website__c</fullName>
    <label>Congress Website</label>
    <type>Url</type>
</CustomField>