unpackaged/main/default/objects/GES_Connect_Corporate_Accounts__c/fields/CSI_form_submitted_by_CM__c.field-meta.xml
<CustomField>
    <fullName>CSI_form_submitted_by_CM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CSI form submitted by CM</label>
    <type>Checkbox</type>
</CustomField>