unpackaged/main/default/objects/GES_Connect_Corporate_Accounts__c/fields/Date_Legal_Reached_Out__c.field-meta.xml
<CustomField>
    <fullName>Date_Legal_Reached_Out__c</fullName>
    <label>Date Legal Reached Out</label>
    <type>Date</type>
</CustomField>