unpackaged/main/default/objects/GES_Connect_Corporate_Accounts__c/fields/Deposit_Invoice_Date_issued__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Invoice_Date_issued__c</fullName>
    <label>Deposit Invoice Date Issued</label>
    <type>Date</type>
</CustomField>