unpackaged/main/default/objects/GES_Connect_Corporate_Accounts__c/fields/Epa3_Closed__c.field-meta.xml
<CustomField>
    <fullName>Epa3_Closed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Epa3 Closed</label>
    <type>Checkbox</type>
</CustomField>