unpackaged/main/default/objects/GES_Connect_Corporate_Accounts__c/fields/Exhibit_Cancelled__c.field-meta.xml
<CustomField>
    <fullName>Exhibit_Cancelled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exhibit Cancelled</label>
    <type>Checkbox</type>
</CustomField>