unpackaged/main/default/objects/GES_Connect_Corporate_Accounts__c/fields/Exhibit_Date_Day_3__c.field-meta.xml
<CustomField>
    <fullName>Exhibit_Date_Day_3__c</fullName>
    <label>Exhibit Date - Day 3</label>
    <type>Date</type>
</CustomField>