unpackaged/main/default/objects/GES_Connect_Corporate_Accounts__c/fields/Exhibit_Hours_Close_Day_1__c.field-meta.xml
<CustomField>
    <fullName>Exhibit_Hours_Close_Day_1__c</fullName>
    <label>Exhibit Hours Close - Day 1</label>
    <type>DateTime</type>
</CustomField>