unpackaged/main/default/objects/GES_Connect_Corporate_Accounts__c/fields/Exhibit_Hours_Open_Day_3__c.field-meta.xml
<CustomField>
    <fullName>Exhibit_Hours_Open_Day_3__c</fullName>
    <label>Exhibit Hours Open - Day 3</label>
    <type>DateTime</type>
</CustomField>