unpackaged/main/default/objects/GES_Connect_Corporate_Accounts__c/fields/Exhibit_Open_Date__c.field-meta.xml
<CustomField>
    <fullName>Exhibit_Open_Date__c</fullName>
    <label>Exhibit Open Date</label>
    <type>Date</type>
</CustomField>