unpackaged/main/default/objects/GES_Connect_Corporate_Accounts__c/fields/Facility_Name_Account__c.field-meta.xml
<CustomField>
    <fullName>Facility_Name_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Facility Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>GES Connect - Corporate Accounts</relationshipLabel>
    <relationshipName>GES_Connect_Corporate_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>