unpackaged/main/default/objects/GES_Connect_Corporate_Accounts__c/fields/FCPA_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>FCPA_Received_Date__c</fullName>
    <description>Created under SAL 472</description>
    <label>FCPA Received Date</label>
    <type>Date</type>
</CustomField>