unpackaged/main/default/objects/GES_Connect_Corporate_Accounts__c/fields/FCPA_Status__c.field-meta.xml
<CustomField>
    <fullName>FCPA_Status__c</fullName>
    <label>FCPA Status</label>
    <type>TextArea</type>
</CustomField>