unpackaged/main/default/objects/GES_Connect_Corporate_Accounts__c/fields/Final_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Final_Invoice__c</fullName>
    <label>Final Invoice #</label>
    <length>30</length>
    <type>Text</type>
</CustomField>