unpackaged/main/default/objects/GES_Connect_Corporate_Accounts__c/fields/Final_Invoice_Amount__c.field-meta.xml
<CustomField>
    <fullName>Final_Invoice_Amount__c</fullName>
    <label>Final Invoice Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>