unpackaged/main/default/objects/GES_Connect_Corporate_Accounts__c/fields/Final_Invoice_Date_issued__c.field-meta.xml
<CustomField>
    <fullName>Final_Invoice_Date_issued__c</fullName>
    <label>Final Invoice Date Issued</label>
    <type>Date</type>
</CustomField>