unpackaged/main/default/objects/GES_Connect_Corporate_Accounts__c/fields/First_Day_Freight__c.field-meta.xml
<CustomField>
    <fullName>First_Day_Freight__c</fullName>
    <description>Created under SAL 475</description>
    <label>First Day Freight can arrive at Showsite</label>
    <type>Date</type>
</CustomField>