unpackaged/main/default/objects/GES_Connect_Corporate_Accounts__c/fields/FRF_Approval__c.field-meta.xml
<CustomField>
    <fullName>FRF_Approval__c</fullName>
    <label>FRF Approval</label>
    <type>TextArea</type>
</CustomField>