unpackaged/main/default/objects/GES_Connect_Corporate_Accounts__c/fields/FRF_Status__c.field-meta.xml
<CustomField>
    <fullName>FRF_Status__c</fullName>
    <description>Changed Field Type under SAL 472
Field Name: &quot;FRF Status&quot;
Old Type: Picklist
New Type: Text Area</description>
    <label>FRF Status</label>
    <type>TextArea</type>
</CustomField>