unpackaged/main/default/objects/GES_Connect_Corporate_Accounts__c/fields/Funding_Owner_O__c.field-meta.xml
<CustomField>
    <fullName>Funding_Owner_O__c</fullName>
    <label>Funding Owner</label>
    <length>30</length>
    <type>Text</type>
</CustomField>