unpackaged/main/default/objects/GES_Connect_Corporate_Accounts__c/fields/General_Contractor_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>General_Contractor_Contact_Name__c</fullName>
    <label>General Contractor Contact Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>