unpackaged/main/default/objects/GES_Connect_Corporate_Accounts__c/fields/General_Contractor_Name__c.field-meta.xml
<CustomField>
    <fullName>General_Contractor_Name__c</fullName>
    <label>General Contractor Name</label>
    <type>TextArea</type>
</CustomField>