unpackaged/main/default/objects/GES_Connect_Corporate_Accounts__c/fields/General_Contractor_Phone__c.field-meta.xml
<CustomField>
    <fullName>General_Contractor_Phone__c</fullName>
    <label>General Contractor Phone</label>
    <type>Phone</type>
</CustomField>