unpackaged/main/default/objects/GES_Connect_Corporate_Accounts__c/fields/General_Contractor_Website__c.field-meta.xml
<CustomField>
    <fullName>General_Contractor_Website__c</fullName>
    <label>General Contractor Website</label>
    <type>Url</type>
</CustomField>