unpackaged/main/default/objects/GES_Connect_Corporate_Accounts__c/fields/GES_Final_Invoice_Received__c.field-meta.xml
<CustomField>
    <fullName>GES_Final_Invoice_Received__c</fullName>
    <label>GES Final Invoice Received</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
                <isActive>false</isActive>
                <label>Closed</label>
            </value>
            <value>
                <fullName>No</fullName>
                <isActive>false</isActive>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>