unpackaged/main/default/objects/GES_Connect_Corporate_Accounts__c/fields/GES_Meeting_Planner__c.field-meta.xml
<CustomField>
    <fullName>GES_Meeting_Planner__c</fullName>
    <label>GES Meeting Planner</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MK – Maria Kramer</fullName>
            </value>
            <value>
                <fullName>BC – Brenda Chambers</fullName>
            </value>
            <value>
                <fullName>LH – Linda Holland</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>