unpackaged/main/default/objects/GES_Connect_Corporate_Accounts__c/fields/GES_Paid__c.field-meta.xml
<CustomField>
    <fullName>GES_Paid__c</fullName>
    <label>GES Paid</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>