unpackaged/main/default/objects/GES_Connect_Corporate_Accounts__c/fields/GES_Paid_Date__c.field-meta.xml
<CustomField>
    <fullName>GES_Paid_Date__c</fullName>
    <label>GES Paid Date</label>
    <type>Date</type>
</CustomField>