unpackaged/main/default/objects/GES_Connect_Corporate_Accounts__c/fields/GES_Proposal_Received__c.field-meta.xml
<CustomField>
    <fullName>GES_Proposal_Received__c</fullName>
    <label>GES Proposal Received</label>
    <type>TextArea</type>
</CustomField>