unpackaged/main/default/objects/GES_Connect_Corporate_Accounts__c/fields/Hotel_1_Name__c.field-meta.xml
<CustomField>
    <fullName>Hotel_1_Name__c</fullName>
    <label>Hotel 1 Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>