unpackaged/main/default/objects/GES_Connect_Corporate_Accounts__c/fields/Hotel_2_cancellation_policy__c.field-meta.xml
<CustomField>
    <fullName>Hotel_2_cancellation_policy__c</fullName>
    <label>Hotel 2 Cancellation Policy</label>
    <length>30</length>
    <type>Text</type>
</CustomField>