unpackaged/main/default/objects/GES_Connect_Corporate_Accounts__c/fields/Hotel_3_cancellation_date__c.field-meta.xml
<CustomField>
    <fullName>Hotel_3_cancellation_date__c</fullName>
    <label>Hotel 3 Cancellation Date</label>
    <type>Date</type>
</CustomField>