unpackaged/main/default/objects/GES_Connect_Corporate_Accounts__c/fields/Hotel_3_Name__c.field-meta.xml
<CustomField>
    <fullName>Hotel_3_Name__c</fullName>
    <label>Hotel 3 Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>