unpackaged/main/default/objects/GES_Connect_Corporate_Accounts__c/fields/Hotel_3_room_rate__c.field-meta.xml
<CustomField>
    <fullName>Hotel_3_room_rate__c</fullName>
    <label>Hotel 3 Room Rate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>