unpackaged/main/default/objects/GES_Connect_Corporate_Accounts__c/fields/Housing_Contact__c.field-meta.xml
<CustomField>
    <fullName>Housing_Contact__c</fullName>
    <label>Housing Logistics Vendor Contact</label>
    <length>30</length>
    <type>Text</type>
</CustomField>